# DRF_Atomic_Habits

./: .env_template  .flake8  .gitignore  Dockerfile  README.md  gunicorn.conf.py  pyproject.toml  requirements.txt  ssh-key-1759120931010.pub
.github/workflows/: ci.yml
config/: settings.py  urls.py
habits/: admin.py  models.py  paginators.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/management/commands/: add_seed_data.py
users/migrations/: 0001_initial.py
